<resources>
    <string name="app_name">Grocery Guru</string>
    <string name="button1_text">Click Me!</string>
    <string name="grocery_guru_logo">Grocery Guru Logo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back_button">Back</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="MealName">Meal Manager</string>
    <string name="StoreName">Store Locator</string>
    <string name="LoginName">Login/Sign Up Page</string>
    <string name="HomePageName">Home</string>
    <string name="GroceryListName">Grocery Manager</string>
    <string name="ProfileName">Profile</string>
    <string name="Profile_Skeleton">Profile</string>
    <string name="AccountSettings">Account Settings</string>
    <string name="Greeting">Welcome Back, $user</string>
    <string name="for_breakfast">For Breakfast</string>
    <string name="ingredients">Ingredients</string>
    <string name="example_appwidget_description" />
    <string name="element_text" />
    <string name="GroceryList">My <b>Grocery List</b></string>
    <string name="manage_account"><b>Manage Account</b></string>
    <string name="my_recipe"><b>My Recipes</b></string>
    <string name="favorites"><b>Favorites</b></string>
    <string name="Saved"><b>Saved</b></string>
    <string name="settings"><b>Settings</b></string>
</resources>