<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:src="@drawable/profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/manage_account"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_button_style"
                    android:drawableStart="@drawable/manage_accounts_24px"
                    android:drawablePadding="20dp"
                    android:elevation="50dp"
                    android:fontFamily="sans-serif"
                    android:paddingStart="30dp"
                    android:text="@string/manage_account"
                    android:textColor="@color/fourth_green"
                    android:textAlignment="textStart"
                    android:onClick="manageAccountClick"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.436" />

                <Button
                    android:id="@+id/My_Recipes"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_button_style"
                    android:drawableStart="@drawable/import_contacts_24px"
                    android:drawablePadding="20dp"
                    android:elevation="50dp"
                    android:fontFamily="sans-serif"
                    android:paddingStart="30dp"
                    android:text="@string/my_recipe"
                    android:textColor="@color/fourth_green"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.543" />

                <Button
                    android:id="@+id/Favorites"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_button_style"
                    android:drawableStart="@drawable/favorite_24px"
                    android:drawablePadding="20dp"
                    android:elevation="50dp"
                    android:fontFamily="sans-serif"
                    android:paddingStart="30dp"
                    android:text="@string/favorites"
                    android:textColor="@color/fourth_green"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.647" />

                <Button
                    android:id="@+id/saved"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_button_style"
                    android:drawableStart="@drawable/bookmark_24px"
                    android:drawablePadding="20dp"
                    android:elevation="50dp"
                    android:fontFamily="sans-serif"
                    android:paddingStart="30dp"
                    android:text="@string/Saved"
                    android:textColor="@color/fourth_green"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.75" />

                <Button
                    android:id="@+id/setting"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_button_style"
                    android:drawableStart="@drawable/settings_24px"
                    android:drawablePadding="20dp"
                    android:elevation="50dp"
                    android:fontFamily="sans-serif"
                    android:paddingStart="30dp"
                    android:text="@string/settings"
                    android:textColor="@color/fourth_green"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.856" />

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="232dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/ProfileName"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/manage_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:onClick="onMenuClick"
                    android:src="@drawable/menu_48px"
                    app:layout_constraintBottom_toTopOf="@+id/profileName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.931"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.228" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>